--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/img
 /storage/*.key
+.env
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
